[gd_scene load_steps=12 format=3 uid="uid://bf3clf2c0ulrc"]

[ext_resource type="Texture2D" uid="uid://dk3eyrsasp8j7" path="res://assets/Entities/Enemy/Shooter/Shooter.png" id="1_senbc"]
[ext_resource type="Script" path="res://Scripts/BallShooter.gd" id="1_y17ii"]
[ext_resource type="PackedScene" uid="uid://bjftyk31q33so" path="res://assets/Entities/Enemy/Shooter/ShooterProjectile.tscn" id="2_x0rtb"]

[sub_resource type="Animation" id="Animation_21fgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_vaip6"]
resource_name = "death"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_01qpx"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_r8rng"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.225, 0.45, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_oenj5"]
resource_name = "shoot"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_ak5xm"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.525),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfqrx"]
_data = {
"RESET": SubResource("Animation_21fgy"),
"death": SubResource("Animation_vaip6"),
"hurt": SubResource("Animation_01qpx"),
"idle": SubResource("Animation_r8rng"),
"shoot": SubResource("Animation_oenj5"),
"walk": SubResource("Animation_ak5xm")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x8s78"]
radius = 12.0
height = 32.0

[node name="BallShooter" type="CharacterBody2D"]
z_index = 3
collision_layer = 64
collision_mask = 33
script = ExtResource("1_y17ii")
projectile = ExtResource("2_x0rtb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-31, -31)
texture = ExtResource("1_senbc")
centered = false
hframes = 4
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gfqrx")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 1)
shape = SubResource("CapsuleShape2D_x8s78")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-19, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
